# robotics-assessment

./: CMakeLists.txt  README.md  setup.sh
docs/: README.md
report/: README.md
ros_processing_cpp/: README.md
ros_processing_python/: README.md
ros_publisher/: README.md
scripts/: README.md
signal_processing_lib/: CMakeLists.txt  README.md  ReadMe.txt  sensor_log.csv
signal_processing_lib/include/: README.md
signal_processing_lib/include/signal_processing/: circular_buffer.hpp  csv_reader.hpp  filter.hpp  low_pass_filter.hpp  median_filter.hpp  moving_average_filter.hpp  sensor_reading.hpp
signal_processing_lib/src/: README.md  csv_reader.cpp
signal_processing_lib/tests/: README.md  test_csv_reader.cpp  test_low_pass_filter.cpp  test_median_filter.cpp  test_moving_average_filter.cpp  test_signal_pipeline.cpp
